# IMEDIA_Project

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: IMEDIA_Project_Third_General_Review.docx  mkdocs.yml
docs/docs/: index.md
imedia_project/: __init__.py  dataset.py  features.py  pipeline.py  plots.py
imedia_project/data_cleaning/: data_cleaning.ipynb  data_cleaning.py
imedia_project/data_extraction/: pipeline.py
imedia_project/data_extraction/extrac_from_facebook/: Facebook_extrac.py
imedia_project/data_extraction/extrac_from_reddit/: Reddit_extract.py  create_reddit_raw_data.py
imedia_project/data_extraction/extrac_from_x/: X_extract.py
imedia_project/data_procesing/: Reddit_pre_procesing.py
imedia_project/modeling/: model.py  predict.py  train.py
models/: hugging_face.ipynb
notebooks/: Draft.ipynb  pruebas.ipynb
